--- a/.github/workflows/blog-feed.yml
+++ b/.github/workflows/blog-feed.yml
@@ -20,20 +20,22 @@ jobs:
         with:
           url: 'https://blog.towavephone.com/rss.xml'
           file: 'README.md'
-          format: "${year}-${02month}-${02day}：[${title}](${url})"
+          format: "${year}${02month}${02day}：[${title}](${url})  "
           start_flag: "<!-- tech blog start -->"
           end_flag: "<!-- tech blog end -->"
           locale: 'zh-CN'
+          max_entry: 8
       - name: life blog
         uses: sarisia/actions-readme-feed@v1
         id: life
         with:
           url: 'https://www.towavephone.com/atom.xml'
           file: 'README.md'
-          format: "${year}-${02month}-${02day}：[${title}](${url})"
+          format: "${year}${02month}${02day}：[${title}](${url})  "
           start_flag: "<!-- life blog start -->"
           end_flag: "<!-- life blog end -->"
           locale: 'zh-CN'
+          max_entry: 8
       - name: push to master
         if: ${{ steps.tech.outputs.changed == true || steps.life.outputs.changed == true }}
         id: commit
