fix: 修复拉取代码

--- a/.github/workflows/blog-feed.yml
+++ b/.github/workflows/blog-feed.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - uses: sarisia/setup-icu@v1
       - uses: actions/checkout@v2
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git pull
       - name: tech blog
         uses: sarisia/actions-readme-feed@v1
         id: tech
