fix: 修复拉取代码

--- a/.github/workflows/blog-feed.yml
+++ b/.github/workflows/blog-feed.yml
@@ -17,7 +17,7 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git pull
+          git pull origin main
       - name: tech blog
         uses: sarisia/actions-readme-feed@v1
         id: tech
