--- a/.github/workflows/blog-feed.yml
+++ b/.github/workflows/blog-feed.yml
@@ -33,7 +33,7 @@ jobs:
         uses: sarisia/actions-readme-feed@v1
         id: life
         with:
-          url: 'https://www.towavephone.com/atom.xml'
+          url: 'http://www.towavephone.com/atom.xml'
           file: 'README.md'
           format: "${year}${02month}${02day}：[${title}](${url})  "
           start_flag: "<!-- life blog start -->"
